integrate microprofile changes. fix wall + clang sanitize

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,8 +1,8 @@
 
 LDFLAGS=-framework OpenGL `sdl2-config --static-libs` -lpthread
 
-CFLAGS=`sdl2-config --cflags` -I.. -Iglew -DGLEW_STATIC -Wno-c++11-extensions 
-#CFLAGS=-fsanitize=undefined-trap -fsanitize-undefined-trap-on-error
+CFLAGS=`sdl2-config --cflags` -I.. -Iglew -DGLEW_STATIC -Wno-c++11-extensions -Wall
+#CFLAGS+=-fsanitize=undefined-trap -fsanitize-undefined-trap-on-error
 CFLAGS+=-g -O0 -Wno-invalid-offsetof
 
 CPPFLAGS=$(CFLAGS)
