--- a/demo/Makefile
+++ b/demo/Makefile
@@ -9,7 +9,7 @@ CPPFLAGS=$(CFLAGS)
 CPPFLAGS+=-stdlib=libc++ -std=c++11
 CPPFLAGS+=-DJQ_MICROPROFILE
 CPPFLAGS+=-DJQ_MICROPROFILE_VERBOSE
-CPPFLAGS+=-DJQ_ASSERT_LOCKS
+#CPPFLAGS+=-DJQ_ASSERT_LOCKS
 #define JQ_IMPL
 #define JQ_MICROPROFILE
 #define JQ_MICROPROFILE_VERBOSE
