fix lockless compile errors. still extremely slow

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,9 +1,9 @@
 
-LDFLAGS=-framework OpenGL `sdl2-config --static-libs` -lpthread -lcurses
+LDFLAGS=-framework OpenGL `sdl2-config --static-libs` -lpthread -lcurses 
 
-CFLAGS=`sdl2-config --cflags` -I.. -Iglew -DGLEW_STATIC -Wno-c++11-extensions -Wall
+CFLAGS=`sdl2-config --cflags` -I.. -Iglew -I. -DGLEW_STATIC -Wno-c++11-extensions -Wall
 #CFLAGS+=-fsanitize=undefined-trap -fsanitize-undefined-trap-on-error
-CFLAGS+=-g -O0 -Wno-invalid-offsetof
+CFLAGS+=-g -O3 -Wno-invalid-offsetof 
 
 CPPFLAGS=$(CFLAGS)
 CPPFLAGS+=-stdlib=libc++ -std=c++11
@@ -11,6 +11,8 @@ CPPFLAGS+=-stdlib=libc++ -std=c++11
 #CPPFLAGS+=-DJQ_MICROPROFILE_VERBOSE
 CPPFLAGS+=-DMICROPROFILE_GPU_TIMERS=0
 CPPFLAGS+=-DJQ_USE_LOCKLESS
+CPPFLAGS+=-DJQ_USE_LOCKLESS
+#CPPFLAGS+=-DMICROPROFILE_ENABLED=0
 #CPPFLAGS+=-DJQ_ASSERT_LOCKS
 #define JQ_IMPL
 #define JQ_MICROPROFILE
@@ -32,7 +34,8 @@ C_OBJS = $(patsubst %.c,%.o,$(C_SOURCES))
 ASM_OBJS = $(patsubst %.S,%.o,$(ASM_SOURCES))
 OBJS = $(C_OBJS) $(CPP_OBJS) $(ASM_OBJS)
 
-all: demo_priority demo_stress demo_node demo_cancel
+default:demo_priority demo_stress demo_node demo_cancel
+all: clean default 
 
 demo_stress: demo_stress.o $(OBJS)
 	$(LD) -o demo_stress demo_stress.o $(OBJS) $(LDFLAGS) $(CPPFLAGS)
@@ -58,9 +61,13 @@ demo_cancel: demo_cancel.o $(OBJS)
 .S.o:
 	$(CC) -c $< -o $@
 
-clean: depend
-	rm -f *.o $(TARGET)
+remove_files:
+	rm -f *.o ../*.o demo_stress demo_priority demo_node demo_cancel .depend
+
+
+clean: remove_files depend
+	
 
 depend: $(CPP_SOURCES) $(C_SOURCES)
-#	$(CC) -MM $(CFLAGS) $(C_SOURCES) > .depend
+	rm -f .depend
 	$(CPP) -MM $(CPPFLAGS) $(CPP_SOURCES) >> .depend
