--- a/demo/Makefile
+++ b/demo/Makefile
@@ -7,18 +7,16 @@ CFLAGS+=-g -O3 -Wno-invalid-offsetof
 
 CPPFLAGS=$(CFLAGS)
 CPPFLAGS+=-stdlib=libc++ -std=c++11
-
 CPPFLAGS+=-DMICROPROFILE_GPU_TIMERS=0
 
-#CPPFLAGS+=-DJQ_USE_LOCKLESS
-CPPFLAGS+=-DJQ_USE_LOCKLESS
 
 
 
-CPP_SOURCES = microprofile.cpp ../jqpipe.cpp ../jqmutex.cpp ../jqlockless.cpp ../jqinternal.cpp ../jqnode.cpp
+CPP_SOURCES = microprofile.cpp ../jqpipe.cpp  ../jqinternal.cpp ../jqnode.cpp
+DEMO_SOURCES = demo_stress.cpp demo_priority.cpp demo_node.cpp demo_cancel.cpp
+JQ_SOURCES=../jqlockless.cpp ../jqmutex.cpp
 C_SOURCES =
 ASM_SOURCES = ../boost_context/jump_x86_64_sysv_macho_gas.S ../boost_context/make_x86_64_sysv_macho_gas.S
-
 TARGET=demo
 CC=clang
 CPP=clang++
@@ -28,24 +26,45 @@ CPP_OBJS = $(patsubst %.cpp,%.o,$(CPP_SOURCES))
 C_OBJS = $(patsubst %.c,%.o,$(C_SOURCES))
 ASM_OBJS = $(patsubst %.S,%.o,$(ASM_SOURCES))
 OBJS = $(C_OBJS) $(CPP_OBJS) $(ASM_OBJS)
+OLL = ../jqlockless.o
+OM = ../jqmutex.o
 
-default:demo_priority demo_stress demo_node demo_cancel
+default: ll m
+
+ll: demo_priority_ll demo_stress_ll demo_node_ll demo_cancel_ll
+
+m: demo_priority_m demo_stress_m demo_node_m demo_cancel_m
 
 all: clean default 
 
-x: clean demo_stress
+x: clean demo_stress_ll
 
-demo_stress: demo_stress.o $(OBJS)
-	$(LD) -o demo_stress demo_stress.o $(OBJS) $(LDFLAGS) $(CPPFLAGS)
+#lockless demo
+demo_stress_ll: demo_stress.o $(OBJS) $(OLL)
+	$(LD) -o demo_stress_ll demo_stress.o $(OBJS) $(OLL) $(LDFLAGS) $(CPPFLAGS)
 
-demo_priority: demo_priority.o $(OBJS)
-	$(LD) -o demo_priority demo_priority.o $(OBJS) $(LDFLAGS) $(CPPFLAGS)
+demo_priority_ll: demo_priority.o $(OBJS) $(OLL)
+	$(LD) -o demo_priority_ll demo_priority.o $(OBJS) $(OLL) $(LDFLAGS) $(CPPFLAGS)
 
-demo_node: demo_node.o $(OBJS) 
-	$(LD) -o demo_node demo_node.o $(OBJS) $(LDFLAGS) $(CPPFLAGS)
+demo_node_ll: demo_node.o $(OBJS) $(OLL)
+	$(LD) -o demo_node_ll demo_node.o $(OBJS) $(OLL) $(LDFLAGS) $(CPPFLAGS)
 
-demo_cancel: demo_cancel.o $(OBJS)
-	$(LD) -o demo_cancel demo_cancel.o $(OBJS) $(LDFLAGS) $(CPPFLAGS)
+demo_cancel_ll: demo_cancel.o $(OBJS) $(OLL)
+	$(LD) -o demo_cancel_ll demo_cancel.o $(OBJS) $(OLL) $(LDFLAGS) $(CPPFLAGS)
+
+#mutex demo
+demo_stress_m: demo_stress.o $(OBJS) $(OM)
+	$(LD) -o demo_stress_m demo_stress.o $(OBJS) $(OM) $(LDFLAGS) $(CPPFLAGS)
+
+demo_priority_m: demo_priority.o $(OBJS) $(OM)
+	$(LD) -o demo_priority_m demo_priority.o $(OBJS) $(OM) $(LDFLAGS) $(CPPFLAGS)
+
+demo_node_m: demo_node.o $(OBJS) $(OM)
+	$(LD) -o demo_node_m demo_node.o $(OBJS) $(OM) $(LDFLAGS) $(CPPFLAGS)
+
+demo_cancel_m: demo_cancel.o $(OBJS) $(OM)
+	$(LD) -o demo_cancel_m demo_cancel.o $(OBJS) $(OM) $(LDFLAGS) $(CPPFLAGS)
+
 
 
 -include .depend
@@ -60,12 +79,11 @@ demo_cancel: demo_cancel.o $(OBJS)
 	$(CC) -c $< -o $@
 
 remove_files:
-	rm -f *.o ../*.o demo_stress demo_priority demo_node demo_cancel .depend
+	rm -f *.o ../*.o demo_stress_ll demo_priority_ll demo_node_ll demo_cancel_ll demo_stress_m demo_priority_m demo_node_m demo_cancel_m .depend
 
 
 clean: remove_files depend
 	
 
-depend: $(CPP_SOURCES) $(C_SOURCES)
-	rm -f .depend
-	$(CPP) -MM $(CPPFLAGS) $(CPP_SOURCES) >> .depend
+depend: $(CPP_SOURCES) $(C_SOURCES) $(DEMO_SOURCES) $(JQ_SOURCES)
+	$(CPP) -MM $(CPPFLAGS) $(CPP_SOURCES) $(DEMO_SOURCES) $(JQ_SOURCES) > .depend
