JqStart now uses a struct for configuration of everything. stacksize is also configurable

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,13 +1,13 @@
+LDFLAGS=-lpthread -lcurses 
 
-LDFLAGS=-framework OpenGL `sdl2-config --static-libs` -lpthread -lcurses 
-
-CFLAGS=`sdl2-config --cflags` -I.. -Iglew -I. -DGLEW_STATIC -Wno-c++11-extensions -Wall
+CFLAGS=-I.. -I. -DGLEW_STATIC -Wno-c++11-extensions -Wall
 #CFLAGS+=-fsanitize=undefined-trap -fsanitize-undefined-trap-on-error
 CFLAGS+=-g -O3 -Wno-invalid-offsetof 
 
 CPPFLAGS=$(CFLAGS)
 CPPFLAGS+=-stdlib=libc++ -std=c++11
 CPPFLAGS+=-DMICROPROFILE_GPU_TIMERS=0
+#CPPFLAGS+=-DJQ_MICROPROFILE
 
 
 
