Add visual studio projects for multilocked. fix vs warnings

--- a/demo/vsproj/jq_demo_node_m.vcxproj
+++ b/demo/vsproj/jq_demo_node_m.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\jqinternal.cpp" />
-    <ClCompile Include="..\..\jqmutex.cpp" />
+    <ClCompile Include="..\..\jqlocked.cpp" />
     <ClCompile Include="..\..\jqnode.cpp" />
     <ClCompile Include="..\..\jqpipe.cpp" />
     <ClCompile Include="..\demo_node.cpp" />
