--- a/demo/vsproj/jq_demo_stress_ll.vcxproj
+++ b/demo/vsproj/jq_demo_stress_ll.vcxproj
@@ -44,7 +44,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>jq</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
-    <ProjectName>jq_demo_stress_ll_org</ProjectName>
+    <ProjectName>jq_demo_stress_ll</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
