--- a/demo/vsproj/jq_demo_stress_m.vcxproj
+++ b/demo/vsproj/jq_demo_stress_m.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\jqinternal.cpp" />
-    <ClCompile Include="..\..\jqmutex.cpp" />
+    <ClCompile Include="..\..\jqlocked.cpp" />
     <ClCompile Include="..\..\jqnode.cpp" />
     <ClCompile Include="..\..\jqpipe.cpp" />
     <ClCompile Include="..\demo_stress.cpp" />
@@ -44,7 +44,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>jq</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
-    <ProjectName>jq_demo_stress_m_org</ProjectName>
+    <ProjectName>jq_demo_stress_m</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
