--- a/demo/Makefile
+++ b/demo/Makefile
@@ -3,6 +3,7 @@ LDFLAGS=-lpthread -lcurses
 CFLAGS=-I.. -I. -DGLEW_STATIC -Wno-c++11-extensions -Wall
 #CFLAGS+=-fsanitize=undefined-trap -fsanitize-undefined-trap-on-error
 CFLAGS+=-g -O3 -Wno-invalid-offsetof 
+CFLAGS+=-DJQ_ASSERT_LOCKS
 
 CPPFLAGS=$(CFLAGS)
 CPPFLAGS+=-stdlib=libc++ -std=c++11
