--- a/demo/Makefile
+++ b/demo/Makefile
@@ -3,11 +3,12 @@ UNAME_S := $(shell uname -s)
 
 LDFLAGS=-lpthread -lcurses
 
-CFLAGS=-I.. -I. -DGLEW_STATIC -Wall
+CFLAGS=-I.. -I../microprofile -I. -DGLEW_STATIC -Wall
 #CFLAGS+=-fsanitize=undefined-trap -fsanitize-undefined-trap-on-error
 CFLAGS+=-g -O0 -Wno-invalid-offsetof -Wno-format
 CFLAGS+=-DJQ_ASSERT_LOCKS
-
+CFLAGS+=-DJQ_MICROPROFILE
+CFLAGS+=-DMICROPROFILE_MAX_THREADS=128
 CPPFLAGS=$(CFLAGS)
 
 #CPPFLAGS+=-stdlib=libc++ -std=c++11
@@ -18,9 +19,9 @@ CPPFLAGS+=-DMICROPROFILE_GPU_TIMERS=0
 
 
 
-CPP_SOURCES = ../microprofile/microprofile.cpp ../jqpipe.cpp  ../jqinternal.cpp ../jqnode.cpp
-DEMO_SOURCES = demo_stress.cpp demo_priority.cpp demo_node.cpp demo_cancel.cpp
-JQ_SOURCES=../jqlockless.cpp ../jqlocked.cpp ../jqmultilocked.cpp
+CPP_SOURCES = ../microprofile/microprofile.cpp ../jqpipe.cpp  ../jqinternal.cpp
+DEMO_SOURCES = demo_stress.cpp demo_priority.cpp demo_cancel.cpp
+JQ_SOURCES=../jqlocked.cpp ../jqmultilocked.cpp
 C_SOURCES =
 ASM_SOURCES = ../boost_context/jump_x86_64_sysv_macho_gas.S ../boost_context/make_x86_64_sysv_macho_gas.S
 
@@ -48,32 +49,21 @@ CPP_OBJS = $(patsubst %.cpp,%.o,$(CPP_SOURCES))
 C_OBJS = $(patsubst %.c,%.o,$(C_SOURCES))
 ASM_OBJS = $(patsubst %.S,%.o,$(ASM_SOURCES))
 OBJS = $(C_OBJS) $(CPP_OBJS) $(ASM_OBJS)
-OLL = ../jqlockless.o
 OM = ../jqlocked.o
 OMM = ../jqmultilocked.o
 
-default: mm
+default: mm m
 
-ll: demo_priority_ll demo_stress_ll demo_node_ll demo_cancel_ll
-mm: demo_priority_mm demo_stress_mm demo_node_mm demo_cancel_mm
-m: demo_priority_m demo_stress_m demo_node_m demo_cancel_m
+ll: demo_priority_ll demo_stress_ll demo_cancel_ll
+mm: demo_priority_mm demo_stress_mm demo_cancel_mm demo_job_profile_mm
+m: demo_priority_m demo_stress_m demo_cancel_m demo_job_profile_m
 
 all: clean default
 
 x: clean demo_stress_ll
 
 #lockless demo
-demo_stress_ll: demo_stress.o $(OBJS) $(OLL)
-	$(LD) -o demo_stress_ll demo_stress.o $(OBJS) $(OLL) $(LDFLAGS) $(CPPFLAGS)
 
-demo_priority_ll: demo_priority.o $(OBJS) $(OLL)
-	$(LD) -o demo_priority_ll demo_priority.o $(OBJS) $(OLL) $(LDFLAGS) $(CPPFLAGS)
-
-demo_node_ll: demo_node.o $(OBJS) $(OLL)
-	$(LD) -o demo_node_ll demo_node.o $(OBJS) $(OLL) $(LDFLAGS) $(CPPFLAGS)
-
-demo_cancel_ll: demo_cancel.o $(OBJS) $(OLL)
-	$(LD) -o demo_cancel_ll demo_cancel.o $(OBJS) $(OLL) $(LDFLAGS) $(CPPFLAGS)
 
 #mutex demo
 demo_stress_m: demo_stress.o $(OBJS) $(OM)
@@ -82,11 +72,11 @@ demo_stress_m: demo_stress.o $(OBJS) $(OM)
 demo_priority_m: demo_priority.o $(OBJS) $(OM)
 	$(LD) -o demo_priority_m demo_priority.o $(OBJS) $(OM) $(LDFLAGS) $(CPPFLAGS)
 
-demo_node_m: demo_node.o $(OBJS) $(OM)
-	$(LD) -o demo_node_m demo_node.o $(OBJS) $(OM) $(LDFLAGS) $(CPPFLAGS)
-
 demo_cancel_m: demo_cancel.o $(OBJS) $(OM)
 	$(LD) -o demo_cancel_m demo_cancel.o $(OBJS) $(OM) $(LDFLAGS) $(CPPFLAGS)
+
+demo_job_profile_m: demo_job_profile.o $(OBJS) $(OM)
+	$(LD) -o demo_job_profile_m demo_job_profile.o $(OBJS) $(OM) $(LDFLAGS) $(CPPFLAGS)
 
 
 #multi mutex demo
@@ -96,12 +86,11 @@ demo_stress_mm: demo_stress.o $(OBJS) $(OMM)
 demo_priority_mm: demo_priority.o $(OBJS) $(OMM)
 	$(LD) -o demo_priority_mm demo_priority.o $(OBJS) $(OMM) $(LDFLAGS) $(CPPFLAGS)
 
-demo_node_mm: demo_node.o $(OBJS) $(OMM)
-	$(LD) -o demo_node_mm demo_node.o $(OBJS) $(OMM) $(LDFLAGS) $(CPPFLAGS)
-
 demo_cancel_mm: demo_cancel.o $(OBJS) $(OMM)
 	$(LD) -o demo_cancel_mm demo_cancel.o $(OBJS) $(OMM) $(LDFLAGS) $(CPPFLAGS)
 
+demo_job_profile_mm: demo_job_profile.o $(OBJS) $(OMM)
+	$(LD) -o demo_job_profile_mm demo_job_profile.o $(OBJS) $(OMM) $(LDFLAGS) $(CPPFLAGS)
 
 
 -include .depend
@@ -116,7 +105,7 @@ demo_cancel_mm: demo_cancel.o $(OBJS) $(OMM)
 	$(CC) -c $< -o $@
 
 remove_files:
-	rm -f *.o ../*.o demo_priority_mm demo_stress_mm demo_node_mm demo_cancel_mm .depend
+	rm -f *.o ../*.o ../microprofile/*.o demo_priority_mm demo_stress_mm demo_cancel_mm .depend
 
 
 clean: remove_files depend
