--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -26,8 +26,6 @@ cflags 					-DJQ_MICROPROFILE_VERBOSE
 .ngen.win32 			ngen.win32
 
 
-.target demo_priority_jq2
-.file demo_priority.cpp
 .file ../jq2.cpp
 .file ../jqinternal.cpp
 .file ../microprofile/microprofile.cpp
@@ -38,3 +36,20 @@ cflags 					-DJQ_MICROPROFILE_VERBOSE
 
 .file.osx 		../boost_context/jump_x86_64_sysv_macho_gas.S
 .file.osx 		../boost_context/make_x86_64_sysv_macho_gas.S
+
+
+.target demo_cancel_jq2
+	.file demo_cancel.cpp
+.end
+
+.target demo_priority_jq2
+	.file demo_priority.cpp
+.end
+
+.target demo_job_profile_jq2
+	.file demo_job_profile.cpp
+.end
+
+.target demo_stress_jq2
+	.file demo_stress.cpp
+.end
