--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -46,8 +46,8 @@ cflags 					-DJQ_MICROPROFILE_VERBOSE
 	.file demo_priority.cpp
 .end
 
-.target demo_job_profile_jq2
-	.file demo_job_profile.cpp
+.target demo_profile_jq2
+	.file demo_profile.cpp
 .end
 
 .target demo_stress_jq2
