cancel no longer tries to claim jobs, and thus no longer reports no. of jobs cancelled. fixed a nasty issue where job queue size -1 was incorrectly used. fixup the demos put in a bunch of asserts

--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -38,18 +38,14 @@ cflags 					-DJQ_MICROPROFILE_VERBOSE
 .file.osx 		../boost_context/make_x86_64_sysv_macho_gas.S
 
 
-.target demo_cancel_jq2
-	.file demo_cancel.cpp
-.end
-
-.target demo_priority_jq2
+.target demo_full
 	.file demo_priority.cpp
 .end
 
-.target demo_profile_jq2
+.target demo_profile
 	.file demo_profile.cpp
 .end
 
-.target demo_stress_jq2
+.target demo_stress
 	.file demo_stress.cpp
 .end
