rename demo_priority.cpp -> demo_full.cpp

--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -39,7 +39,7 @@ cflags 					-DJQ_MICROPROFILE_VERBOSE
 
 
 .target demo_full
-	.file demo_priority.cpp
+	.file demo_full.cpp
 .end
 
 .target demo_profile
