--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -38,6 +38,10 @@ cflags 					-DJQ_MICROPROFILE_VERBOSE
 .file.osx 		../boost_context/make_x86_64_sysv_macho_gas.S
 
 
+.target demo_simple
+	.file demo_simple.cpp
+.end
+
 .target demo_full
 	.file demo_full.cpp
 .end
