added sanitizer builds
fixed an inconsistency with lock asserting. its now enabled whenever
asserts are enabled.

--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -5,6 +5,10 @@
 .config debug
 .config release
 
+.config asan 		release			osx linux
+.config ubsan 		release			osx linux
+.config threadsan 	release			osx linux
+.config memsan 		release			osx linux
 
 
 includepath 			.
@@ -19,6 +23,17 @@ cflags 					-DMICROPROFILE_MAX_THREADS=128
 cflags 					-DMICROPROFILE_GPU_TIMERS=0
 cflags 					-DJQ_MICROPROFILE_VERBOSE
 
+cflags.asan 			-fsanitize=address
+ldflags.asan 			-fsanitize=address
+
+cflags.threadsan 		-fsanitize=thread
+ldflags.threadsan 		-fsanitize=thread
+
+cflags.ubsan 			-fsanitize=undefined
+ldflags.ubsan 			-fsanitize=undefined
+
+cflags.ubsan 			-fsanitize=memory
+ldflags.ubsan 			-fsanitize=memory
 
 
 .ngen.osx				ngen.osx
