--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -5,10 +5,13 @@
 .config debug
 .config release
 
-.config asan 		release			osx linux
-.config ubsan 		release			osx linux
-.config threadsan 	release			osx linux
-.config memsan 		release			osx linux
+
+.config nomicroprofile 	release
+
+.config asan 			release			osx linux
+.config ubsan 			release			osx linux
+.config threadsan 		release			osx linux
+.config memsan 			release			osx linux
 
 
 includepath 			.
@@ -18,10 +21,12 @@ includepath 			../microprofile
 
 
 cflags 					-DJQ_ASSERT_LOCKS
-cflags 					-DJQ_MICROPROFILE
 cflags 					-DMICROPROFILE_MAX_THREADS=128
 cflags 					-DMICROPROFILE_GPU_TIMERS=0
+
+cflags 					-DJQ_MICROPROFILE
 cflags 					-DJQ_MICROPROFILE_VERBOSE
+cflags.nomicroprofile	-DMICROPROFILE_ENABLED=0
 
 cflags.asan 			-fsanitize=address
 ldflags.asan 			-fsanitize=address
