Locked stack allocator

--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -37,8 +37,9 @@ ldflags.threadsan 		-fsanitize=thread
 cflags.ubsan 			-fsanitize=undefined
 ldflags.ubsan 			-fsanitize=undefined
 
-cflags.ubsan 			-fsanitize=memory
-ldflags.ubsan 			-fsanitize=memory
+cflags.memsan 			-fsanitize=memory
+cflags.memsan 			-fsanitize-memory-track-origins=2 -fno-omit-frame-pointer
+ldflags.memsan 			-fsanitize=memory
 
 
 .ngen.osx				ngen.osx
