fixed issue with waiters kicking before writing finish value, which would cause deadlocks. fix ubsan issue in demo. demos run clean in all but thread sanitizer

--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -10,8 +10,8 @@
 
 .config asan 			release			osx linux
 .config ubsan 			release			osx linux
-.config threadsan 		release			osx linux
-.config memsan 			release			osx linux
+.config tsan	 		release			osx linux
+.config msan 			release			osx linux
 
 
 includepath 			.
@@ -31,15 +31,17 @@ cflags.nomicroprofile	-DMICROPROFILE_ENABLED=0
 cflags.asan 			-fsanitize=address
 ldflags.asan 			-fsanitize=address
 
-cflags.threadsan 		-fsanitize=thread
-ldflags.threadsan 		-fsanitize=thread
+cflags.tsan 			-fsanitize=thread
+ldflags.tsan 			-fsanitize=thread
 
 cflags.ubsan 			-fsanitize=undefined
+#-fsanitize-trap=undefined
 ldflags.ubsan 			-fsanitize=undefined
+# -fsanitize-trap=undefined
 
-cflags.memsan 			-fsanitize=memory
-cflags.memsan 			-fsanitize-memory-track-origins=2 -fno-omit-frame-pointer
-ldflags.memsan 			-fsanitize=memory
+cflags.msan 			-fsanitize=memory
+cflags.msan 			-fsanitize-memory-track-origins=2 -fno-omit-frame-pointer
+ldflags.msan 			-fsanitize=memory
 
 
 .ngen.osx				ngen.osx
