--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -28,9 +28,13 @@ cflags 					-DJQ_MICROPROFILE
 cflags 					-DJQ_MICROPROFILE_VERBOSE
 cflags.nomicroprofile	-DMICROPROFILE_ENABLED=0
 
+
+
 cflags.asan 			-fsanitize=address
 ldflags.asan 			-fsanitize=address
 
+#disable because microprofile causes tsan to trigger
+cflags.tsan				-DMICROPROFILE_ENABLED=0
 cflags.tsan 			-fsanitize=thread
 ldflags.tsan 			-fsanitize=thread
 
