first win32 thing compiling

--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -58,6 +58,9 @@ ldflags.msan 			-fsanitize=memory
 .file ../microprofile/microprofile.cpp
 
 
+.file.win32 	../boost_context/jump_x86_64_ms_pe_masm.asm
+.file.win32  	../boost_context/make_x86_64_ms_pe_masm.asm
+
 .file.linux 	../boost_context/jump_x86_64_sysv_elf_gas.S
 .file.linux  	../boost_context/make_x86_64_sysv_elf_gas.S
 
