fix osx build. memory sanitinizer disabled, since its not supported by clang on osx

--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -11,7 +11,7 @@
 .config asan 			release			osx linux
 .config ubsan 			release			osx linux
 .config tsan	 		release			osx linux
-.config msan 			release			osx linux
+.config msan 			release			linux
 
 
 includepath 			.
