add lto config, using clang thin-lto + disabling asserts

--- a/demo/ngen.cfg
+++ b/demo/ngen.cfg
@@ -7,6 +7,7 @@
 
 
 .config nomicroprofile 	release
+.config lto 			release			osx linux
 
 .config asan 			release			osx linux
 .config ubsan 			release			osx linux
@@ -20,13 +21,17 @@ includepath 			../microprofile
 
 
 
-cflags 					-DJQ_ASSERT_LOCKS
 cflags 					-DMICROPROFILE_MAX_THREADS=128
 cflags 					-DMICROPROFILE_GPU_TIMERS=0
 
 cflags 					-DJQ_MICROPROFILE
 cflags 					-DJQ_MICROPROFILE_VERBOSE
 cflags.nomicroprofile	-DMICROPROFILE_ENABLED=0
+
+cflags.lto				-DMICROPROFILE_ENABLED=0
+cflags.lto 				-DJQ_NO_ASSERT
+cflags.lto 				-flto=thin
+ldflags.lto 			-flto=thin
 
 
 
