--- a/.github/workflows/ng-build.yml
+++ b/.github/workflows/ng-build.yml
@@ -4,26 +4,18 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build-linux:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: seanmiddleditch/gha-setup-ninja@master
 
       - name: Checkout submodules
         run: |
           git submodule update --init --recursive
-      # Runs a set of commands using the runners shell
       - name: build all
         run: |
           pushd demo
@@ -47,18 +39,14 @@ jobs:
         run: demo/_out/linux/demo_simple_msan
 
   build-macos:
-    # The type of runner that the job will run on
     runs-on: macos-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: seanmiddleditch/gha-setup-ninja@master
 
       - name: Checkout submodules
         run: |
           git submodule update --init --recursive
-      # Runs a set of commands using the runners shell
       - name: build all
         run: |
           pushd demo
@@ -82,9 +70,7 @@ jobs:
 
   build-windows:
     runs-on: windows-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: seanmiddleditch/gha-setup-ninja@master
       - uses: ilammy/msvc-dev-cmd@v1
@@ -94,12 +80,10 @@ jobs:
       - name: Checkout submodules
         run: |
           git submodule update --init --recursive
-      # Runs a set of commands using the runners shell
       - name: build all
         run: |
           pushd demo
-          dir
-          ./ng.bat all
+          ./ng all
           popd
       - name: test simple debug
         run: demo/_out/win32/demo_simple_debug
